src/objects/Initial_Assessment_Form__c.object
<CustomObject>
    <fields>
        <fullName>Is_this_person_aware_of_your_drug_use__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this person aware of your drug use/ contact with this service:</inlineHelpText>
        <label>Is this person aware of your drug use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Living_where__c</fullName>
        <formula>TEXT(Client__r.eCASS02t1__X7b_Livin_Where__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Living where</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Living_with_whom__c</fullName>
        <formula>TEXT(Client__r.eCASS02t1__X7a_Living_with_whom__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Living with whom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mecation_Prescribed_By_1__c</fullName>
        <label>Mecation Prescribed By 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mecation_Prescribed_By_2__c</fullName>
        <label>Mecation Prescribed By 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mecation_Prescribed_By_3__c</fullName>
        <label>Mecation Prescribed By 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medication_Comments_1__c</fullName>
        <label>Medication Comments 1</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medication_Comments_2__c</fullName>
        <label>Medication Comments 2</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medication_Comments_3__c</fullName>
        <label>Medication Comments 3</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medication_Dose_and_Frecuency_1__c</fullName>
        <label>Medication Dose and Frecuency 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medication_Dose_and_Frecuency_2__c</fullName>
        <label>Medication Dose and Frecuency 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medication_Dose_and_Frecuency_3__c</fullName>
        <label>Medication Dose and Frecuency 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Client__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOK_Address__c</fullName>
        <formula>Client__r.NOK_Address_if_different__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOK Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOK_Mobile__c</fullName>
        <formula>Client__r.eCASS02t1__Next_of_Kin_mobile_phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOK Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Medication_1__c</fullName>
        <label>Name of Medication 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Medication_2__c</fullName>
        <label>Name of Medication 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Medication_3__c</fullName>
        <label>Name of Medication 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_next_of_kin__c</fullName>
        <formula>Client__r.eCASS02t1__Next_of_Kin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name of next of kin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality_Country_on_passport__c</fullName>
        <label>Nationality – Country on passport:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_days_alcohol_consumed_last_M__c</fullName>
        <inlineHelpText>How many days did you drink alcohol over the past month (If none put 0 ):</inlineHelpText>
        <label>Number of days alcohol consumed last M</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_times_started_treatment_CY__c</fullName>
        <inlineHelpText>What is the number of times you started treatment in this programme/ service this year (Jan – Dec) :</inlineHelpText>
        <label>Number of times started treatment CY</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_mobile_number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On mobile number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ongoing_Carer_1_Phone__c</fullName>
        <formula>Ongoing_Carer_1__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ongoing Carer 1 Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ongoing_Carer_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ongoing Carer 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Initial Assessment Forms (Ongoing Carer 1)</relationshipLabel>
        <relationshipName>Initial_Assessment_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ongoing_Carer_2_Phone__c</fullName>
        <formula>Ongoing_Carer_2__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ongoing Carer 2 Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ongoing_Carer_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ongoing Carer 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Initial Assessment Forms (Ongoing Carer 2)</relationshipLabel>
        <relationshipName>Initial_Assessment_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ongoing_Carer_3_Phone__c</fullName>
        <formula>Ongoing_Carer_3__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ongoing Carer 3 Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ongoing_Carer_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ongoing Carer 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Initial Assessment Forms (Ongoing Carer 3)</relationshipLabel>
        <relationshipName>Initial_Assessment_Forms2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Drug_Treatment_Centre_Name__c</fullName>
        <inlineHelpText>When Other Drug Treatment Centre has been chosen as the source of referral name the agency here</inlineHelpText>
        <label>Other Drug Treatment Centre Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_healthcare_involved_specify__c</fullName>
        <inlineHelpText>If other healthcare workers are involved in your pregnancy care please give details: (E.g. General Practitioner, Obstetrician, Midwife, Social Worker, etc)</inlineHelpText>
        <label>Other healthcare involved, specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PPS_Number__c</fullName>
        <formula>Client__r.PPS_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PPS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Please_specify_the_first_drug_you_used__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please specify the first drug you used (excluding alcohol):</inlineHelpText>
        <label>Please specify the first drug you used</label>
        <referenceTo>eCASS02t1__Drug_HRB__c</referenceTo>
        <relationshipLabel>Initial Assessment Forms (Please specify the first drug you used)</relationshipLabel>
        <relationshipName>Initial_Assessment_Forms6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_help_for_mental_health__c</fullName>
        <inlineHelpText>Have you received help for mental health difficulties in the past?</inlineHelpText>
        <label>Received help for mental health</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Receiving_any_help_for_mental_health__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are you currently receiving any help for mental health difficulties?</inlineHelpText>
        <label>Receiving any help for mental health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reduce_problems_with_substance_use__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Would you like to reduce any of the problems associated with your substance use?</inlineHelpText>
        <label>Reduce problems with substance use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referral_date__c</fullName>
        <label>Referral date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_for_comprehensive_assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referral for comprehensive assessment:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationhip_to_you__c</fullName>
        <formula>TEXT(Client__r.NOK_Relationship__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationhip to you</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_of_transmission_1__c</fullName>
        <label>Route of transmission 1</label>
        <picklist>
            <picklistValues>
                <fullName>1. Inject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. smoke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Eat/ drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Sniff/ snort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Sublingual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Rectal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Topical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Route_of_transmission_2__c</fullName>
        <label>Route of transmission 2</label>
        <picklist>
            <picklistValues>
                <fullName>1. Inject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. smoke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Eat/ drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Sniff/ snort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Sublingual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Rectal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Topical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Route_of_transmission_3__c</fullName>
        <label>Route of transmission 3</label>
        <picklist>
            <picklistValues>
                <fullName>1. Inject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. smoke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Eat/ drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Sniff/ snort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Sublingual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Rectal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Topical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Organisation_2__c</fullName>
        <label>Service /Organisation 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Organisation_3__c</fullName>
        <label>Service /Organisation 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Organisation_4__c</fullName>
        <label>Service /Organisation 4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Organisation__c</fullName>
        <inlineHelpText>Please identify services / workers you have been in contact with over the past year, including drug &amp; alcohol
services? (May include: addiction treatment service, housing / homeless services, GP, counsellor, social worker,
legal services)</inlineHelpText>
        <label>Service /Organisation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_of_referral__c</fullName>
        <label>Source of referral</label>
        <picklist>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harm reduction programme</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other drug treatment centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Court/ probation/ police</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social/ community service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accident &amp; emergency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acute hospital service (excluding A&amp;E)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental health liaison nurse At A&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental health service including psychiatrist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specify_main_type_of_alcohol_consume__c</fullName>
        <inlineHelpText>Please specify the main type of alcohol you consume:</inlineHelpText>
        <label>Specify main type of alcohol consume</label>
        <picklist>
            <picklistValues>
                <fullName>Beer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spirits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fortified wine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcopops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (specify)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Specify_other_type_of_alcohol__c</fullName>
        <label>Specify other type of alcohol</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_required_1_short_term__c</fullName>
        <inlineHelpText>What supports/ progress do you require/ want in this area (shorter term)?</inlineHelpText>
        <label>Support required 1 short term</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_required_2_short_term__c</fullName>
        <inlineHelpText>What supports/ progress do you require/ want in this area (shorter term)?</inlineHelpText>
        <label>Support required 2 short term</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_required_3_short_term__c</fullName>
        <inlineHelpText>What supports/ progress do you require/ want in this area (shorter term)?</inlineHelpText>
        <label>Support required 3 short term</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_contact_with_this_programme__c</fullName>
        <inlineHelpText>What has been your type of contact with this programme/ service:</inlineHelpText>
        <label>Type of contact with this programme</label>
        <picklist>
            <picklistValues>
                <fullName>First treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One or more treatment periods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workers_Name__c</fullName>
        <inlineHelpText>Please identify services / workers you have been in contact with over the past year, including drug &amp; alcohol
services? (May include: addiction treatment service, housing / homeless services, GP, counsellor, social worker,
legal services)</inlineHelpText>
        <label>Workers Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Write_to_you_at_this_address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Write to you at this address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X10_Relative_concerned_about_you__c</fullName>
        <inlineHelpText>10. Has a relative or friend or a doctor or another heath worker been concerned about your drinking or suggested you cut down?</inlineHelpText>
        <label>10. Relative concerned about you</label>
        <picklist>
            <picklistValues>
                <fullName>(0) No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Yes, but not in the last year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) Yes, during the last year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X10_You_anyone_been_hurt_by_drug_use__c</fullName>
        <inlineHelpText>Have you or anyone else been hurt (mentally or physically) because you used drugs</inlineHelpText>
        <label>10 You/anyone been hurt by drug use?</label>
        <picklist>
            <picklistValues>
                <fullName>(0) No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) Yes, but not over the past year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Yes, over the past year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X11_Anyone_been_worried_about_drug_use__c</fullName>
        <inlineHelpText>Has a relative or a friend, a doctor or a nurse, or anyone else, been worried about your drug use or said to you that you should stop using drugs?</inlineHelpText>
        <label>11.Anyone been worried about drug use?</label>
        <picklist>
            <picklistValues>
                <fullName>(0) No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) Yes, but not over the past year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Yes, over the past year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X1_How_often_do_you_drink_alcohol__c</fullName>
        <label>1. How often do you drink alcohol?</label>
        <picklist>
            <picklistValues>
                <fullName>(0) Never (skip to Qs 9 – 10)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) Monthly or less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) 2 to 4 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) 2 to 3 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) 4 or more times a week</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X1_How_often_do_you_use_drugs__c</fullName>
        <inlineHelpText>How often do you use drugs other than alcohol?</inlineHelpText>
        <label>1.  How often do you use drugs</label>
        <picklist>
            <picklistValues>
                <fullName>(0) Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) Once a month or less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) 2-4 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) 2-3 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) 4 times a week or more often</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2_How_many_drinks_per_occasion__c</fullName>
        <inlineHelpText>2. How many drinks containing alcohol do you have on a typical day when you are drinking?</inlineHelpText>
        <label>2. How many drinks per occasion</label>
        <picklist>
            <picklistValues>
                <fullName>(0) 1 or 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) 3 or 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) 5 or 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) 7, 8, or 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) 10 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2_Use_more_than_1_drug_same_occassion__c</fullName>
        <inlineHelpText>Do you use more than one type of drug on the same occasion?</inlineHelpText>
        <label>2. Use more than 1 drug same occassion?</label>
        <picklist>
            <picklistValues>
                <fullName>(0) Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) Once a month or less</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) 2-4 times a month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) 2-3 times a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) 4 times a week or more often</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X3_How_many_times_a_day_to_you_use_drug__c</fullName>
        <inlineHelpText>How many times do you take drugs on a typical day when you use drugs?</inlineHelpText>
        <label>3.How many times a day to you use drugs?</label>
        <picklist>
            <picklistValues>
                <fullName>(0) 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) 1-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) 3-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) 5-6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) 7 or more</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X3_How_often_do_you_have_six_more_drinks__c</fullName>
        <inlineHelpText>3. How often do you have six or more drinks on one occasion?</inlineHelpText>
        <label>3. How often do you have six/more drinks</label>
        <picklist>
            <picklistValues>
                <fullName>(0) Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) Less than monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) Daily or almost daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X4_How_often_are_you_heavily_influenced__c</fullName>
        <inlineHelpText>How often are you influenced heavily by drugs?</inlineHelpText>
        <label>4.How often are you heavily influenced?</label>
        <picklist>
            <picklistValues>
                <fullName>(0) Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) Less often that one month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Every month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) Every week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) Daily or almost every day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X4_Were_you_not_able_to_stop_drinking__c</fullName>
        <inlineHelpText>4. How often during the last year have you found that you were not able to stop drinking once you had started?</inlineHelpText>
        <label>4. Were you not able to stop drinking</label>
        <picklist>
            <picklistValues>
                <fullName>(0) Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) Less than monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) Daily or almost daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X5_Have_you_failed_to_do_what_was_expect__c</fullName>
        <inlineHelpText>5. How often during the last year have you failed to do what was normally expected of you?</inlineHelpText>
        <label>5. Have you failed to do what was expect</label>
        <picklist>
            <picklistValues>
                <fullName>(0) Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) Less than monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) Daily or almost daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X5_Longing_so_strong_couldnt_resist__c</fullName>
        <inlineHelpText>Over the past year, have you felt that your longing for drugs was so strong that you could not resist it?</inlineHelpText>
        <label>5.Longing so strong couldnt resist?</label>
        <picklist>
            <picklistValues>
                <fullName>(0) Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) Less often that one month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Every month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) Every week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) Daily or almost every day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X6_You_needed_a_drink_in_the_morning__c</fullName>
        <inlineHelpText>6. How often during the last year have you needed a first drink in the morning to get yourself going after a heavy drinking session?</inlineHelpText>
        <label>6. You needed a drink in the morning</label>
        <picklist>
            <picklistValues>
                <fullName>(0) Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) Less than monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) Daily or almost daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X6_Youve_not_been_able_to_stop_once_star__c</fullName>
        <inlineHelpText>Has it happened, over the past year, that you have not been able to stop taking drugs once you have started?</inlineHelpText>
        <label>6.Youve not been able to stop once start</label>
        <picklist>
            <picklistValues>
                <fullName>(0) Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) Less often that one month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Every month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) Every week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) Daily or almost every day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X7_Have_you_had_a_feeling_of_guilt__c</fullName>
        <inlineHelpText>7. How often during the last year have you had a feeling of guilt or remorse after drinking?</inlineHelpText>
        <label>7. Have you had a feeling of guilt</label>
        <picklist>
            <picklistValues>
                <fullName>(0) Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) Less than monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) Daily or almost daily</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X7_How_often_have_you_neglected__c</fullName>
        <inlineHelpText>How often over the past year have you taken drugs and then neglected to do something you should have done?</inlineHelpText>
        <label>7.How often have you neglected over drug</label>
        <picklist>
            <picklistValues>
                <fullName>(0) Never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(1) Less often that one month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(2) Every month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(3) Every week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(4) Daily or almost every day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>